Add bill version lock and unlock actions
